# QRedmineClient

./: .cmake-format.py  .codespellexclude  .codespellrc  .gitignore  CMakeLists.txt  LICENSE  QRedmineClient_global.h  README.md  authentication.h  authenticator.cpp  authenticator.h  passwordauthentication.cpp  passwordauthentication.h  qredmineclient.cpp  qredmineclient.h  request.cpp  request.h  tokenauthentication.cpp  tokenauthentication.h
cmake/: parse_header_and_sources.cmake  subdirs.cmake
docker/: README.md
src/: CMakeLists.txt  authentication.cpp  authentication.h  client.cpp  client.h  customfield.h  customfieldfilter.h  enumeration.h  enums.h  group.h  issue.h  issuecategory.h  issuestatus.h  item.h  jsonrequest.cpp  jsonrequest.h  membership.h  options.h  passwordauthentication.cpp  passwordauthentication.h  project.h  qredmineclient_global.h  request.cpp  request.h  resource.h  timeentry.h  timeentryjson.cpp  timeentryjson.h  tokenauthentication.cpp  tokenauthentication.h  tracker.h  user.h
test/: CMakeLists.txt  main.cpp
